--- a/templates/main_site/index.html
+++ b/templates/main_site/index.html
@@ -6,7 +6,7 @@
     <p class="text-lg text-center text-white mb-10">«Чтение — это способ взглянуть на мир чужими глазами.»</p>
     <div class="max-w-4xl">
         <h1 class="text-7xl md:text-[96px] font-extrabold text-white leading-none tracking-tighter">
-            Некоторые книги<br>не заканчиваются<br>с последней страницы
+            Некоторые книги<br>не заканчиваются<br>с последней страницей
         </h1>
         <p class="mt-8 text-xl text-[#EAEAEA] max-w-lg">
             Мы делимся историями, что продолжаются внутри. 30+ отзывов уже здесь.
