--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,7 +23,7 @@
             <a href="{{ url_for('main_site.reviews') }}" class="hover:opacity-75 transition-opacity">Рецензии</a>
             <a href="{{ url_for('bot_portal.showcase') }}" class="text-indigo-400 hover:opacity-75 transition-opacity">Портал бота</a>
         </nav>
-        <a href="#" class="text-white hover:opacity-75 transition-opacity">
+        <a href="#" id="user-icon" class="text-white hover:opacity-75 transition-opacity">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
             </svg>
@@ -56,6 +56,9 @@
     </div>
 </footer>
 
+{% include 'main_site/main_login.html' %}
+
 {% block body_js %}{% endblock %}
+<script src="{{ url_for('main_site.static', filename='js/main_login.js') }}"></script>
 </body>
 </html>
